fix layout on firefox

--- a/src/js/components/home/style.scss
+++ b/src/js/components/home/style.scss
@@ -111,8 +111,10 @@
 
 		padding: $padding;
 
+
 		> section {
 			display: flex;
+
 
 			> h1 {
 				margin: 0;
@@ -120,7 +122,6 @@
 				font-weight: 500;
 				font-size: 28px;
 				line-height: 33px;
-
 			}
 		}
 
@@ -140,7 +141,7 @@
 			margin-top: 30px;
 
 			@media (min-width: 1600px) { 
-				width: 65%;
+				width: 73%;
 			}
 
 		}
@@ -222,15 +223,19 @@
 
 	}
 
-	> img {
+	.imageContainer {
 
-		object-fit: scale-down;
 		margin: 0 10%;
-		box-shadow: 2px 6px 4px rgba(0, 0, 0, 0.25);
 
+		> img {
 
+			box-shadow: 2px 6px 4px rgba(0, 0, 0, 0.25);
+			object-fit: scale-down;
+
+		}
 
 	}
+
 	
 }
 
@@ -257,7 +262,6 @@
 		padding: 25px;
 
 		> img {
-			//width: 100%;
 			height: 200px;
 			margin: 30px;
 		}
@@ -310,12 +314,6 @@
 
 		> h1, > p {
 			color: white;
-
-
-
-
-
-
 		}
 
 		> h1 {
